<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="10dp"
        android:id="@+id/relNr">


    <EditText
        android:inputType="numberDecimal"
        android:id="@+id/inNr"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:background="#52D8DAE3"
        android:text="@string/input_number"
        android:textAlignment="center"
        android:textSize="30sp"
        />

    <TextView
        android:id="@+id/outNr"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#52D8DAE3"
        android:text="@string/output_number"
        android:textAlignment="center"
        android:textSize="30sp"
        android:layout_below="@+id/inNr"
        />
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relNr"
        android:layout_marginTop="25dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:id="@+id/keyboard">

        <RelativeLayout
            android:id="@+id/nrTop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/nr7"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/custom_button"
                android:text="@string/_7"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/nr8"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button"
                android:text="@string/_8"
                android:textAlignment="center"
                android:textSize="50sp"
                />

            <Button
                android:id="@+id/nr9"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_button"
                android:text="@string/_9"
                android:textAlignment="center"
                android:textSize="50sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/nrCenter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nrTop"
            android:layout_marginTop="25dp">

            <Button
                android:id="@+id/nr4"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentStart="true"
                android:background="@drawable/custom_button"
                android:text="@string/_4"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/nr5"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="68dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button"
                android:text="@string/_5"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:id="@+id/nr6"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_alignParentEnd="true"
                android:background="@drawable/custom_button"
                android:text="@string/_6"
                android:textAlignment="center"
                android:textSize="50sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nrBottom"
            android:layout_below="@+id/nrCenter"
            android:layout_marginTop="25dp">
            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/custom_button"
                android:text="@string/_1"
                android:textSize="50sp"
                android:textAlignment="center"
                android:id="@+id/nr1"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/nr2"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="68dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button"
                android:text="@string/_2"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/custom_button"
                android:text="@string/_3"
                android:textSize="50sp"
                android:textAlignment="center"
                android:id="@+id/nr3"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nrBottom2"
            android:layout_below="@+id/nrBottom"
            android:layout_marginTop="25dp">
            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/custom_button"
                android:text="@string/c"
                android:textSize="50sp"
                android:textAlignment="center"
                android:id="@+id/nrC"
                android:layout_alignParentStart="true"/>

            <Button
                android:id="@+id/nr0"
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:layout_marginStart="68dp"
                android:layout_marginEnd="68dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/custom_button"
                android:text="@string/_0"
                android:textAlignment="center"
                android:textSize="50sp" />

            <Button
                android:layout_width="75dp"
                android:layout_height="75dp"
                android:background="@drawable/custom_button"
                android:text="."
                android:textSize="50sp"
                android:textAlignment="center"
                android:id="@+id/nrDot"
                android:layout_alignParentEnd="true"/>
        </RelativeLayout>
        
        
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_bnt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/keyboard"
        android:layout_marginTop="0dp">

        <Button
            android:id="@+id/calc"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/calculate"
            android:textSize="25sp"
            android:background="@drawable/custom_button_2"
            >

    </RelativeLayout>


</RelativeLayout>